--- a/styles/grid.css
+++ b/styles/grid.css
@@ -27,3 +27,27 @@
   font-weight: normal;
   font-size: 1rem;
 }
+
+@keyframes fadeSlideIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-15px) scale(0.1);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0) scale(0.55);
+  }
+}
+
+.grid-container frog-card {
+  transform: scale(0.5);
+  transform-origin: top center;
+  height: 200px;
+  overflow: visible;
+  opacity: 0;
+  padding-top: 125px;
+  animation-name: fadeSlideIn;
+  animation-duration: 0.5s;
+  animation-delay: 0.2s;
+  animation-fill-mode: forwards;
+}
