--- a/shop.css
+++ b/shop.css
@@ -12,6 +12,13 @@
     margin-bottom: 1rem;
 }
 
+#button-row {
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 #gen-container {
     justify-self: center;
     border-radius: 5px;
@@ -53,6 +60,46 @@ pack-cover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.tooltip-container {
+  position: relative;
+  display: inline-block;
+  margin-left: 6px;
+  cursor: pointer;
+}
+
+.tooltip-icon {
+  font-weight: bold;
+  font-size: 16px;
+  border-radius: 50%;
+  padding: 3px 4px;
+  background-color: #a1a1a1;
+  border: 1px solid #ffffff;
+  margin-left: 1rem;
+}
+
+.tooltip-text {
+  visibility: hidden;
+  opacity: 0;
+  width: max-content;
+  background-color: #333;
+  color: #fff;
+  text-align: left;
+  border-radius: 6px;
+  padding: 8px 12px;
+  position: absolute;
+  z-index: 1;
+  bottom: 170%; /* Show above the icon */
+  left: 50%;
+  transform: translateX(-50%);
+  transition: opacity 0.3s;
+  white-space: nowrap;
+}
+
+.tooltip-container:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
 }
 
 @media (max-width: 768px) {
