--- a/shop.css
+++ b/shop.css
@@ -12,7 +12,7 @@
     margin-bottom: 1rem;
 }
 
-#button-row {
+#button-row { /* when add points button is removed, delete this and change flex direction to row in #buttoncont*/
   display:flex;
   flex-direction: row;
   align-items: center;
