--- a/styles/shop.css
+++ b/styles/shop.css
@@ -1,3 +1,9 @@
+#points {
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+}
+
 #shoptitle {
     text-align: center;
     margin: 0.25rem 0rem;
