--- a/styles/shop.css
+++ b/styles/shop.css
@@ -1,12 +1,35 @@
+#top-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin: 0.5rem 0;
+}
+
 #points {
   display: flex;
   flex-direction: row;
-  justify-items: center;
+  align-items: center;
+  position: absolute;
+  left: 1rem;
+}
+
+#points-display {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+#points-img {
+  margin-left: 0.4rem;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 #shoptitle {
-    text-align: center;
-    margin: 0.25rem 0rem;
+  margin: 0;
+  font-size: 2rem;
+  text-align: center;
+  flex-grow: 1;
 }
 
 #buttoncont {
