--- a/styles/clicker.css
+++ b/styles/clicker.css
@@ -11,12 +11,10 @@
 
 #clicker-comp {
   transform: scale(1);
-  transform-origin: top center;
+  transform-origin: center;
   position: absolute;
   width: 300px;
-  height: 400px;
+  height: 300px;
   overflow: visible;
-  padding-top: 50px;
-  /* animation-duration: 0.5s;
-  animation-fill-mode: forwards; */
+  padding-top: 100px;
 }
