fixed different screen size having nav bar/ hamburger issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -70,6 +70,10 @@ button[disabled] {
     cursor: not-allowed;
 }
 
+.nav-right {
+    display: flex;
+}
+
 @media (max-width: 768px) {
     #card_buttons{
         flex-direction: row; 
