--- a/styles/clicker.css
+++ b/styles/clicker.css
@@ -10,11 +10,18 @@
 } */
 
 #clicker-comp {
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+}
+
+#clicker-button {
   transform: scale(1);
   transform-origin: center;
   position: absolute;
   width: 300px;
   height: 300px;
   overflow: visible;
-  padding-top: 100px;
+  margin-top: 100px;
+  border-radius: 50%;
 }
