--- a/styles/clicker.css
+++ b/styles/clicker.css
@@ -20,8 +20,17 @@
   transform-origin: center;
   position: absolute;
   width: 300px;
-  height: 300px;
+  aspect-ratio: 1 / 1;
+  min-block-size: 1vh;
   overflow: visible;
   margin-top: 100px;
   border-radius: 50%;
+  
 }
+
+@media (max-width: 350px) {
+  #clicker-button {
+    width: 85vw;
+  }
+}
+
