--- a/styles/clicker.css
+++ b/styles/clicker.css
@@ -27,7 +27,47 @@
   border-radius: 50%;
   
 }
+.tooltip-container {
+  position: relative;
+  display: inline-block;
+  align-items: center;
+  margin-left: 6px;
+  cursor: pointer;
+}
 
+.tooltip-icon {
+  font-weight: bold;
+  font-size: 100%;
+  border-radius: 50%;
+  padding: 0rem 0.3rem;
+  background-color: #a1a1a1;
+  border: 0.1rem solid #ffffff;
+  margin-left: 1rem;
+}
+
+.tooltip-text {
+  visibility: hidden;
+  opacity: 0;
+  width: max-content;
+  background-color: #333;
+  color: #fff;
+  text-align: left;
+  border-radius: 0.2rem;
+  padding: 1rem 1rem;
+  position: absolute;
+  z-index: 1;
+  bottom: 75%; /* Show above the icon */
+  left: 60%;
+  transform: translateX(-50%);
+  transition: opacity 0.3s;
+  white-space: nowrap;
+  font-family: Tahoma, sans-serif;
+}
+
+.tooltip-container:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
+}
 @media (max-width: 350px) {
   #clicker-button {
     width: 85vw;
