--- a/styles/grid.css
+++ b/styles/grid.css
@@ -41,6 +41,12 @@ card-display {
   height: 100%;
 }
 
+.card-title {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(195px, 1fr));
