--- a/styles/clicker.css
+++ b/styles/clicker.css
@@ -60,6 +60,7 @@
   background-color: #333;
   color: #fff;
   border-radius: 0.2rem;
+  text-align: center;
   padding: 1rem 1rem;
   position: absolute;
   z-index: 1;
