change shop bg color

--- a/styles/shop.css
+++ b/styles/shop.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #c69214; /* background color */
+  background-color: #00629b; /* background color */
 }
 
 /* Rarity color variables */
