--- a/styles/shop.css
+++ b/styles/shop.css
@@ -17,15 +17,15 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
-  margin: 0.5rem 0;
+  margin: 0.25rem 0;
 }
 
 #points {
   display: flex;
   flex-direction: row;
   align-items: center;
-  position: absolute;
-  left: 1rem;
+  margin-left: 1rem;
+  justify-content: flex-start;
 }
 
 #points-display {
@@ -40,7 +40,7 @@ body {
 }
 
 #shoptitle {
-  margin: 0;
+  margin-right: 3.5rem;
   font-size: 2rem;
   text-align: center;
   flex-grow: 1;
@@ -52,8 +52,9 @@ body {
   align-items: center;
   justify-self: center;
   justify-content: center;
-  gap: 0.5rem;
+  gap: 1.5rem;
   margin-top: 1rem;
+  margin-left: 2rem;
 }
 
 /* Redesigned button with card game aesthetic */
@@ -580,8 +581,8 @@ pack-cover.rarity-special-edition.with-glow::before {
   padding: 1rem 1rem;
   position: absolute;
   z-index: 100;
-  bottom: 75%;
-  left: 60%;
+  top: 85%;
+  left: 250%;
   transform: translateX(-50%);
   transition: opacity 0.3s;
   white-space: nowrap;
