--- a/styles/grid.css
+++ b/styles/grid.css
@@ -1,7 +1,8 @@
 .grid-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(195px, 1fr));
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 10px; 
   /* column-gap: 10px;  */
   /* padding: 20px 0px;  */
   padding: 40px 60px;
@@ -39,7 +40,6 @@
   height: 300px;
   overflow: visible;
   opacity: 0;
-  padding-top: 50px;
   animation-name: fadeSlideIn;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
