--- a/styles/grid.css
+++ b/styles/grid.css
@@ -267,18 +267,18 @@ card-display {
   }
 }
 
-#top-bar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
-  background-color: var(--modal-background-color);
-  margin-bottom: 1rem;
-}
-
-#shoptitle {
+#collectiontitle {
   color: var(--text-color);
   font-size: 2rem;
   margin: 1rem 0;
   text-align: center;
+}
+
+.total-cards {
+    text-align: center;
+    font-size: 1.5rem;
+    color: var(--secondary-text-color);
+    margin: 0.5rem 0;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
