--- a/styles/card-thumbnail.css
+++ b/styles/card-thumbnail.css
@@ -1,35 +1,22 @@
-.flip-card {
+.card {
     width: 400px;
     height: 400px;
-    perspective: 1000px;
     cursor: pointer;
+    transition: transform 0.3s ease;
 }
 
-.flip-card-inner {
+.card:hover {
+    transform: scale(1.1);
+}
+
+.card-content {
     position: relative;
     width: 100%;
     height: 100%;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-}
-
-.flipped .flip-card-inner {
-    transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-}
-
-.flip-card-back {
-    transform: rotateY(180deg);
 }
 
 .face {
