Removed highlighting on cards/coin and moved functionality to clicker wrapper

--- a/styles/frog-card.css
+++ b/styles/frog-card.css
@@ -3,6 +3,8 @@
     height: 400px;
     perspective: 1000px;
     cursor: pointer;
+    -webkit-user-select: none; /* Disable text selection */
+    user-select: none;
 }
 
 .flip-card-inner {
