Frenzy and alignment

--- a/styles/clicker.css
+++ b/styles/clicker.css
@@ -1,10 +1,10 @@
-.clicker-container {
+#clicker-container {
   display: flex;
   flex-direction: column;
   align-items: center;         /* Center horizontally */
   justify-content: flex-start; /* Align to top */
-  /* background: var(--background-color); */
   background: linear-gradient(0deg, transparent 0%, #00629B 50%, transparent 100%);
+  min-height: 100vh
 }
 
 #clicker-comp {
@@ -15,7 +15,6 @@
   justify-content: center;
   width: 35vh;
   aspect-ratio: 1 / 1;     
-  margin-top: 100px;
   transform: scale(1);
   transform-origin: center;
   overflow: visible;
@@ -31,7 +30,7 @@
   position: relative;
   width: 35vh;
   aspect-ratio: 1 / 1;
-  margin-top: 100px;
+  margin: auto;
   transform: scale(1);
   max-width: 400px;
   min-width: 10vh;
@@ -90,7 +89,7 @@
   font-size: clamp(1.5rem, 5vw, 3rem); 
   font-weight: bold;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 10px;
   width: 90vw;
   max-width: 400px;
   overflow-wrap: break-word;
